--- a/app/views/input_calibrations/_form.html.erb
+++ b/app/views/input_calibrations/_form.html.erb
@@ -61,9 +61,16 @@
   </div>
 
   <div class="field">
-    <%= form.label :Fertiiliser_TypeFertiliser_Rate, class:"label" %>
+    <%= form.label :fertiliser_type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Fertiiliser_TypeFertiliser_Rate, class:"input" %>
+      <%= form.text_field :fertiliser_type, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :fertiliser_rate, class:"label" %>
+    <div class="control">
+      <%= form.text_field :fertiliser_rate, class:"input" %>
     </div>
   </div>
 
