--- a/app/views/input_calibrations/index.html.erb
+++ b/app/views/input_calibrations/index.html.erb
@@ -12,7 +12,8 @@
       <th>Section</th>
       <th>Crop</th>
       <th>Variety</th>
-      <th>Fertiiliser typefertiliser rate</th>
+      <th>Fertiliser Type</th>
+      <th>Fertiliser Rate</th>
       <th>Bags used</th>
       <th>Herbicide</th>
       <th>Herbicide rate</th>
@@ -32,7 +33,8 @@
         <td><%= input_calibration.Section %></td>
         <td><%= input_calibration.Crop %></td>
         <td><%= input_calibration.Variety %></td>
-        <td><%= input_calibration.Fertiiliser_TypeFertiliser_Rate %></td>
+        <td><%= input_calibration.fertiliser_type %></td>
+        <td><%= input_calibration.fertiliser_rate %></td>
         <td><%= input_calibration.Bags_Used %></td>
         <td><%= input_calibration.Herbicide %></td>
         <td><%= input_calibration.Herbicide_Rate %></td>
