--- a/app/views/input_calibrations/show.html.erb
+++ b/app/views/input_calibrations/show.html.erb
@@ -36,8 +36,13 @@
 </p>
 
 <p>
-  <strong>Fertiiliser typefertiliser rate:</strong>
-  <%= @input_calibration.Fertiiliser_TypeFertiliser_Rate %>
+  <strong>Fertiliser Type:</strong>
+  <%= @input_calibration.fertiliser_type %>
+</p>
+
+<p>
+  <strong>Fertiliser Rate:</strong>
+  <%= @input_calibration.fertiliser_rate %>
 </p>
 
 <p>
