--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -1,15 +1,87 @@
-<div class="columns">
-  <div class="column">
-    <div class="card">
-      <div class="card-header">
-        <h1>New Deduction Table</h1>
-      </div>
-      <div class="card-content">
-        <div class="content">
-          <%= render 'form', deduction_table: @deduction_table %>
-          <%= link_to 'Back', deduction_tables_path, class:"button is-dark" %>
-        </div>
-      </div>
+<%= form_with(model: @deduction_table, local: true) do |form| %>
+  <% if @deduction_table.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@deduction_table.errors.count, "error") %> prohibited this deduction_table from being saved:</h2>
+
+      <ul>
+        <% @deduction_table.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :Season, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Season, class:"input" %>
     </div>
   </div>
-</div>
+
+  <div class="field">
+    <%= form.label :Month, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Month, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :employee_name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :employee_name, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :employee_number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :employee_number, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :Farm_Name, class:"label" %>
+    <div class="control">
+      <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :allowance, class:"label" %>
+    <div class="control">
+      <%= form.text_field :allowance, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :payee, class:"label" %>
+    <div class="control">
+      <%= form.text_field :payee, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :nssa, class:"label" %>
+    <div class="control">
+      <%= form.text_field :nssa, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :nec, class:"label" %>
+    <div class="control">
+      <%= form.text_field :nec, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :cash_requests, class:"label" %>
+    <div class="control">
+      <%= form.text_field :cash_requests, class:"input" %>
+    </div>
+  </div>
+
+  <div class="actions">
+    <%= form.submit class:"button is-success" %>
+  </div>
+<% end %>
