--- a/app/views/timebooks/new.html.erb
+++ b/app/views/timebooks/new.html.erb
@@ -1,92 +1,94 @@
 
 <div class="box">
 <h1 class="has-text-centered">New Timebook</h1>
-<%Employee.all.each do |employee| %>
-  <div class="columns box my-1">
-    <div class="column is-2">
-      <div class="card">
-        <h5 class="has-text-centered"><strong>Name</strong></h5>
-          <div class="content has-text-centered">
-            <%= employee.employee_name %>
-          </div>
+<% Employee.all.each do |employee| %>
+  <% unless employee_already_exists(employee.employee_name) %>
+    <div class="columns box my-1">
+      <div class="column is-2">
+        <div class="card">
+          <h5 class="has-text-centered"><strong>Name</strong></h5>
+            <div class="content has-text-centered">
+              <%= employee.employee_name %>
+            </div>
+        </div>
       </div>
-    </div>
 
-    <div class="column is-2">
-      <div class="card">
-        <h5 class="has-text-centered"><strong>Emp Number</strong></h5>
-          <div class="content has-text-centered">
-            <%= employee.employee_number %>
-          </div>
+      <div class="column is-2">
+        <div class="card">
+          <h5 class="has-text-centered"><strong>Emp Number</strong></h5>
+            <div class="content has-text-centered">
+              <%= employee.employee_number %>
+            </div>
+        </div>
       </div>
-    </div>
 
-    <div class="column is-2">
-      <div class="card">
-        <h5 class="has-text-centered"><strong>Rate</strong></h5>
-          <div class="content has-text-centered">
-            <%= employee.daily_rate %>
-          </div>
+      <div class="column is-2">
+        <div class="card">
+          <h5 class="has-text-centered"><strong>Rate</strong></h5>
+            <div class="content has-text-centered">
+              <%= employee.daily_rate %>
+            </div>
+        </div>
       </div>
-    </div>
 
-    <div class="column is-6">
-      <%= form_with(model: @timebook, local: true) do |form| %>
-        <% if @timebook.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@timebook.errors.count, "error") %> prohibited this timebook from being saved:</h2>
+      <div class="column is-6">
+        <%= form_with(model: @timebook, local: true) do |form| %>
+          <% if @timebook.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@timebook.errors.count, "error") %> prohibited this timebook from being saved:</h2>
 
-            <ul>
-              <% @timebook.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ul>
+              <ul>
+                <% @timebook.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+          <div class="field">
+            <%= form.text_field :employee_name, value: employee.employee_name, type: :hidden %>
+          </div>
+
+          <div class="field">
+            <%= form.text_field :employee_number, value: employee.employee_number, type: :hidden %>
+          </div>
+
+          <div class="field">
+            <%= form.text_field :rate, value: employee.daily_rate, type: :hidden %>
+          </div>
+
+          <div class="field">
+            <%= form.text_field :gross, value: employee.daily_rate, type: :hidden %>
+          </div>
+
+          <div class="field">
+            <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
+          </div>
+
+          <div class="columns">
+            <div class="column is-7">
+              <div class="field">
+                <%= form.label :date, class:"label" %>
+                <%= form.date_select :date %>
+              </div>
+            </div>
+
+            <div class="column is-2">
+              <div class="field">
+                <%= form.label :day, class:'label' %>
+                <%= form.select :day, [1] %>
+              </div>
+            </div>
+            <div class="column is-3">
+              <div class="actions">
+                <%= form.submit 'Update', class:"button is-success" %>
+              </div>
+            </div>
           </div>
         <% end %>
-
-        <div class="field">
-          <%= form.text_field :employee_name, value: employee.employee_name, type: :hidden %>
         </div>
-
-        <div class="field">
-          <%= form.text_field :employee_number, value: employee.employee_number, type: :hidden %>
-        </div>
-
-        <div class="field">
-          <%= form.text_field :rate, value: employee.daily_rate, type: :hidden %>
-        </div>
-
-        <div class="field">
-          <%= form.text_field :gross, value: employee.daily_rate, type: :hidden %>
-        </div>
-
-        <div class="field">
-          <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
-        </div>
-
-        <div class="columns">
-          <div class="column is-7">
-            <div class="field">
-              <%= form.label :date, class:"label" %>
-              <%= form.date_select :date %>
-            </div>
-          </div>
-
-          <div class="column is-2">
-            <div class="field">
-              <%= form.label :day, class:'label' %>
-              <%= form.select :day, [1] %>
-            </div>
-          </div>
-          <div class="column is-3">
-            <div class="actions">
-              <%= form.submit 'Update', class:"button is-success" %>
-            </div>
-          </div>
-        </div>
-      <% end %>
       </div>
-    </div>
+    <% end %>
     <%end%>
   <%= link_to 'Back', timebooks_path, class:"button is-dark" %>
 </div>
