Add starting date and end date for month

--- a/app/views/deduction_tables/_form.html.erb
+++ b/app/views/deduction_tables/_form.html.erb
@@ -33,6 +33,20 @@
   </div>
 
   <div class="field">
+    <%= form.label :month_starting, class:"label" %>
+    <div class="control">
+      <%= form.text_field :month_starting, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :month_ending, class:"label" %>
+    <div class="control">
+      <%= form.text_field :month_ending, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
     <%= form.label :employee_number, class:"label" %>
     <div class="control">
       <%= form.text_field :employee_number, class:"input" %>
