Add more changes

--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -54,6 +54,13 @@
   </div>
 
   <div class="field">
+    <%= form.label :vat, class:"label" %>
+    <div class="control">
+      <%= form.text_field :vat, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
     <%= form.label :Total_Amount, class:"label" %>
     <div class="control">
       <%= form.text_field :Total_Amount, class:"input" %>
