--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -13,6 +13,7 @@
       <th>Asset number</th>
       <th>Asset type</th>
       <th>Unit price</th>
+      <th>V.A.T</th>
       <th>Total amount</th>
       <th>Pro number</th>
       <th>User</th>
@@ -30,6 +31,7 @@
         <td><%= asset.Asset_Number %></td>
         <td><%= asset.Asset_Type %></td>
         <td><%= asset.Unit_Price %></td>
+        <td><%= asset.vat %></td>
         <td><%= asset.Total_Amount %></td>
         <td><%= asset.Pro_Number %></td>
         <td><%= asset.user_id %></td>
