--- a/app/views/cereal_sales/_form.html.erb
+++ b/app/views/cereal_sales/_form.html.erb
@@ -47,6 +47,13 @@
   </div>
 
   <div class="field">
+    <%= form.label :crop, class:"label" %>
+    <div class="control">
+      <%= form.text_field :crop, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
     <%= form.label :Truck_Number, class:"label" %>
     <div class="control">
       <%= form.text_field :Truck_Number, class:"input" %>
