--- a/app/views/cereal_sales/index.html.erb
+++ b/app/views/cereal_sales/index.html.erb
@@ -10,6 +10,7 @@
       <th>Season</th>
       <th>Farm name</th>
       <th>Grower name</th>
+      <th>Crop</th>
       <th>Truck number</th>
       <th>Trailer number</th>
       <th>Test density</th>
@@ -34,6 +35,7 @@
         <td><%= cereal_sale.Season %></td>
         <td><%= cereal_sale.Farm_Name %></td>
         <td><%= cereal_sale.Grower_Name %></td>
+        <td><%= cereal_sale.crop %></td>
         <td><%= cereal_sale.Truck_Number %></td>
         <td><%= cereal_sale.Trailer_Number %></td>
         <td><%= cereal_sale.Test_Density %></td>
