--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -15,6 +15,7 @@
       <th>NSSA</th>
       <th>NEC</th>
       <th>Cash Requests</th>
+      <th>Total Amount</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,6 +33,7 @@
         <td><%= deduction_table.nssa %></td>
         <td><%= deduction_table.nec %></td>
         <td><%= deduction_table.cash_requests %></td>
+        <td><%= deduction_table.total_amount %></td>
         <td><%= link_to 'Show', deduction_table %></td>
         <td><%= link_to 'Edit', edit_deduction_table_path(deduction_table) %></td>
         <td><%= link_to 'Destroy', deduction_table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
