--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -1,118 +1,123 @@
-<div class="box">
-  <div class="columns">
-    <div class="column">
-      <%= form_with(model: @deduction_table, local: true) do |form| %>
-        <% if @deduction_table.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@deduction_table.errors.count, "error") %> prohibited this deduction_table from being saved:</h2>
+<% Employee.all.each do |employee| %>
+  <div class="box">
+    <%= form_with(model: @deduction_table, local: true) do |form| %>
+      <% if @deduction_table.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@deduction_table.errors.count, "error") %> prohibited this deduction_table from being saved:</h2>
 
-            <ul>
-              <% @deduction_table.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
+          <ul>
+            <% @deduction_table.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-        <div class="columns">
-          <div class="column is-12">
-            <div class="field">
-              <%= form.label :Season, class:"label" %>
-              <div class="control">
-                <%= form.text_field :Season, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :Month, class:"label" %>
-              <div class="control">
-                <%= form.text_field :Month, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :employee_name, class:"label" %>
-              <div class="control">
-                <%= form.text_field :employee_name, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :employee_number, class:"label" %>
-              <div class="control">
-                <%= form.text_field :employee_number, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :Farm_Name, class:"label" %>
-              <div class="control">
-                <%= form.text_field :Farm_Name, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :allowance, class:"label" %>
-              <div class="control">
-                <%= form.text_field :allowance, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :payee, class:"label" %>
-              <div class="control">
-                <%= form.text_field :payee, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :nssa, class:"label" %>
-              <div class="control">
-                <%= form.text_field :nssa, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :nec, class:"label" %>
-              <div class="control">
-                <%= form.text_field :nec, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :cash_requests, class:"label" %>
-              <div class="control">
-                <%= form.text_field :cash_requests, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :month_starting, class:"label" %>
-              <div class="control">
-                <%= form.date_select :month_starting, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :month_ending, class:"label" %>
-              <div class="control">
-                <%= form.date_select :month_ending, class:"input" %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= form.label :total_amount, class:"label" %>
-              <div class="control">
-                <%= form.text_field :total_amount, class:"input" %>
-              </div>
+      <div class="columns">
+        <div class="column is-3">
+          <strong>Employee Name</strong> <br>
+          <%= employee.employee_name %>
+          <%= form.text_field :employee_name, value: employee.employee_name, type: :hidden %>
+        </div>
+        <div class="column is-3">
+          <strong>Employee Number</strong> <br>
+          <%= employee.employee_number %>
+          <%= form.text_field :employee_number, value: employee.employee_number, type: :hidden %>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :month_starting, class:"label" %>
+            <div class="control">
+              <%= form.date_select :month_starting, class:"input" %>
             </div>
           </div>
         </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :month_ending, class:"label" %>
+            <div class="control">
+              <%= form.date_select :month_ending, class:"input" %>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <div id='fromDiv' onclick="formDivControll()"> <strong>Other Deductions</strong> <br><br>
+      <div class="columns">
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :payee, class:"label" %>
+            <div class="control">
+              <%= form.text_field :payee, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :nssa, class:"label" %>
+            <div class="control">
+              <%= form.text_field :nssa, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :nec, class:"label" %>
+            <div class="control">
+              <%= form.text_field :nec, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :cash_requests, class:"label" %>
+            <div class="control">
+              <%= form.text_field :cash_requests, class:"input" %>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="columns">
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :Farm_Name, class:"label" %>
+            <div class="control">
+              <%= form.text_field :Farm_Name, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :allowance, class:"label" %>
+            <div class="control">
+              <%= form.text_field :allowance, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :Season, class:"label" %>
+            <div class="control">
+              <%= form.text_field :Season, class:"input" %>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <%= form.label :Month, class:"label" %>
+            <div class="control">
+              <%= form.text_field :Month, class:"input" %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="other-deductions has-text-centered">
+        <span id="clickButton" class="button is-info">Click To Add More Deductions</span>
+        <div id="otherDeductions" class="hidden">
           <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other1_name, class:"label" %>
                 <div class="control">
@@ -120,8 +125,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other1_amount, class:"label" %>
                 <div class="control">
@@ -129,10 +133,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other2_name, class:"label" %>
                 <div class="control">
@@ -140,8 +141,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other2_amount, class:"label" %>
                 <div class="control">
@@ -152,7 +152,7 @@
           </div>
 
           <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other3_name, class:"label" %>
                 <div class="control">
@@ -160,8 +160,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other3_amount, class:"label" %>
                 <div class="control">
@@ -169,10 +168,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other4_name, class:"label" %>
                 <div class="control">
@@ -180,8 +176,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other4_amount, class:"label" %>
                 <div class="control">
@@ -192,7 +187,7 @@
           </div>
 
           <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other5_name, class:"label" %>
                 <div class="control">
@@ -200,8 +195,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other5_amount, class:"label" %>
                 <div class="control">
@@ -209,10 +203,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other6_name, class:"label" %>
                 <div class="control">
@@ -220,8 +211,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other6_amount, class:"label" %>
                 <div class="control">
@@ -232,7 +222,7 @@
           </div>
 
           <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other7_name, class:"label" %>
                 <div class="control">
@@ -240,8 +230,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other7_amount, class:"label" %>
                 <div class="control">
@@ -249,10 +238,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other8_name, class:"label" %>
                 <div class="control">
@@ -260,8 +246,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other8_amount, class:"label" %>
                 <div class="control">
@@ -272,7 +257,7 @@
           </div>
 
           <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other9_name, class:"label" %>
                 <div class="control">
@@ -280,8 +265,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other9_amount, class:"label" %>
                 <div class="control">
@@ -289,10 +273,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="columns">
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other10_name, class:"label" %>
                 <div class="control">
@@ -300,8 +281,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="column is-6">
+            <div class="column">
               <div class="field">
                 <%= form.label :other10_amount, class:"label" %>
                 <div class="control">
@@ -311,14 +291,15 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="actions">
+        <%= form.text_field :total_amount, value: 0, type: :hidden %>
+        <div class="actions has-text-centered my-3">
           <%= form.submit class:"button is-success" %>
         </div>
-      <% end %>
-    </div>
+    <% end %>
   </div>
-</div>
+<% end %>
 
 <%= link_to 'Back', deduction_tables_path, class:"button is-black my-3" %>
 
