Add jquery and some changes to code

--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -114,7 +114,7 @@
 
 
       <div class="other-deductions has-text-centered">
-        <span id="clickButton" class="button is-info">Click To Add More Deductions</span>
+        <span id="clickButton" class="clickbutton button is-info mb-2">Click To Add More Deductions</span>
         <div id="otherDeductions" class="hidden">
           <div class="columns">
             <div class="column">
